--- a/Recommendation_Model_On_Vehicle_Recall.ipynb
+++ b/Recommendation_Model_On_Vehicle_Recall.ipynb
@@ -6,7 +6,7 @@
       "name": "Recommendation_Model_On_Vehicle_Recall.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbYw5+8KWwm4QJoNPYgnCZ",
+      "authorship_tag": "ABX9TyNwifR1Z9qtIbiXVY/zPKW4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "6d05a17b-338c-4320-ba7f-6914409a8aa2"
+        "outputId": "da35d95c-4e6f-4885-fbe0-601c0b727a48"
       },
       "source": [
         "import sys\n",
@@ -88,24 +88,37 @@
         "mpl.rc('ytick', labelsize=12)\n",
         "import statsmodels.formula.api as smf\n",
         "import os\n",
+        "import urllib\n",
         "\n",
-        "REQUIREMENT_FILE = 'https://drive.google.com/u/0/uc?id=151lpB4jCHNQJiiZabmm_JQTczehYuq1O&export=download'\n",
+        "\n",
+        "REQUIREMENT_FILE = 'https://raw.githubusercontent.com/AilingLiu/Recommendation_Model_On_Vehicle_Recall/master/requirements.txt' #stored on github\n",
+        "#REQUIREMENT_FILE = 'https://drive.google.com/u/0/uc?id=151lpB4jCHNQJiiZabmm_JQTczehYuq1O&export=download' #alternative, stored on gdrive\n",
+        "\n",
         "REQ_NAME = 'requirements.txt'\n",
         "\n",
-        "def fetch_requirement(req_file=REQUIREMENT_FILE, output_name=REQ_NAME):\n",
-        "  gdown.download(req_file, output_name, quiet=False) \n",
+        "def fetch_file(file_url=REQUIREMENT_FILE, output_name=REQ_NAME):\n",
+        "  #gdown.download(req_file, output_name, quiet=False)\n",
+        "  print('Downloading')\n",
+        "  urllib.request.urlretrieve(file_url, output_name) \n",
+        "  print('Complete.')\n",
         "\n",
-        "fetch_requirement()"
+        "fetch_file()"
       ],
-      "execution_count": 54,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/u/0/uc?id=151lpB4jCHNQJiiZabmm_JQTczehYuq1O&export=download\n",
-            "To: /content/requirements.txt\n",
-            "100%|██████████| 90.0/90.0 [00:00<00:00, 39.9kB/s]\n"
+            "Downloading\n",
+            "Complete.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
           ],
           "name": "stderr"
         }
@@ -182,40 +195,35 @@
       "metadata": {
         "id": "uHkkfdSAkCFv",
         "colab_type": "code",
-        "outputId": "7c7cb442-dde1-483e-efc5-4fc6aa491072",
+        "outputId": "0ac7e4c2-d3a2-4f5f-9738-c667050ebe52",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 268
+          "height": 233
         }
       },
       "source": [
-        "import gdown\n",
+        "CAR_URL = 'https://raw.githubusercontent.com/AilingLiu/Recommendation_Model_On_Vehicle_Recall/master/Recall_Data.csv' #stored on github\n",
+        "#CAR_URL = 'https://drive.google.com/u/0/uc?id=1gN_rtHd2opL3WOP9ra3vEdzdtJo-2EHh&export=download' #alternative, stored on gdrive\n",
         "\n",
-        "CAR_URL = 'https://drive.google.com/u/0/uc?id=1gN_rtHd2opL3WOP9ra3vEdzdtJo-2EHh&export=download'\n",
         "OUTPUT_NAME = os.path.join(DATA_PATH, 'recall.csv')\n",
-        "\n",
-        "def fetch_car_data(car_url=CAR_URL, output_name=OUTPUT_NAME):\n",
-        "  gdown.download(car_url, output_name, quiet=False) \n",
         "\n",
         "def load_data(file_name=OUTPUT_NAME):\n",
         "  column_names = ['model_year', 'fuel', 'wheel', 'power_hp', 'transmission', 'body', 'variant', 'quantity_sold', 'recall_result']\n",
         "  return pd.read_csv(file_name, header=0, names=column_names)\n",
         "\n",
-        "fetch_car_data()\n",
+        "fetch_file(CAR_URL, OUTPUT_NAME)\n",
         "car = load_data()\n",
         "car.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/u/0/uc?id=1gN_rtHd2opL3WOP9ra3vEdzdtJo-2EHh&export=download\n",
-            "To: /content/CAR/DATASETS/recall.csv\n",
-            "100%|██████████| 6.09k/6.09k [00:00<00:00, 2.02MB/s]\n"
+            "Downloading\n",
+            "Complete.\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         },
         {
           "output_type": "execute_result",
@@ -329,7 +337,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
